# Neos_CyberdeckV2

./: .env.example  .gitignore  CyberDeck.desktop  RASPBERRY_PI_5_SETUP_REQUIREMENTS.txt  README.md  build-phase9.sh  check-db.js  cleanup_denji.bat  fix-announcements.js  fix-image-recipe.sh  fix-layers.sh  fix_bblayers.py  fix_defconfig.py  fix_kmachine.py  fix_localconf.py  fix_ssl.js  generate_ssl.bat  install_ssl.js  launch-admin.bat  launch_cyberdeck.bat  launch_secure.bat  middleware.ts  next.config.js  output.html  package-lock.json  package.json  repair-and-build.sh  server.js  setup-phase5.sh  setup-phase6.sh  setup-phase78.sh  setup_dunst.sh  shrink.txt  sync_database.bat  tailwind.config.js  test-delete.js  tsconfig.json  write-image-recipe.sh  wsl-repair.sh
app/: globals.css  layout.tsx
backend/: main.py
components/: emoji-picker.tsx  file-upload.tsx  file-viewer.tsx  incoming-call-overlay.tsx  media-room.tsx  mobile-toggle.tsx  mode-toggle.tsx  outgoing-call-overlay.tsx  socket-indicatior.tsx  user-avatar.tsx
config/: peers.json.example
data/: mesh.db
deploy/: README.md  ROADMAP.md
hooks/: use-call-context.tsx  use-call.ts  use-chat-filter-store.ts  use-chat-query.ts  use-chat-read.ts  use-chat-scroll.ts  use-chat-socket.ts  use-drag-scroll.ts  use-modal-store.ts  use-reply-store.ts
lib/: audio-tones.ts  current-profile-pages.ts  current-profile.ts  db-enums.ts  db.ts  device-storage.ts  file-access.ts  file-manager-path.ts  format-chat-time.ts  initial-profile.ts  logger.ts  (+19 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+307 files in other folders)
